--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <script>
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
